@@ -14,6 +14,9 @@
 
 	* libfuse: allow setting ctime in ->setattr()
 
+	* libfuse: add flags to ->rename().  See renameat2() system call
+	in linux-3.15 and later kernels.
+
 2014-03-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Initilaize stat buffer passed to ->getattr() and ->fgetattr() to
